--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "braintree-web-drop-in-react": "^1.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
