--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecom_client",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -44,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8000"
+  }
 }
